--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -169,6 +169,10 @@
 	border-radius: 5px;
 	background:  asset-url("household_small.png") no-repeat scroll white 5px 5px;	
 }
+.proc_control {
+	width: 300px;
+	border-radius: 5px;
+}
 .zipcodecontrol.form-control, .noa-control.form-control, .noc-control.form-control, .agecontrol.form-control {
 	padding-left: 50px;
 }
